# QtResourceStaticLibrary

./:  Resource Static Library  CMakeLists.txt  QtIcon.cxx  QtIcon.xml  TestQt4.cxx  TestQt4.h  TestQt4.ui  resources.qrc
